[package]
name = "wgpu_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.1", features = ["derive"] }
env_logger = "0.11.1"
pollster = "0.3.0"
wgpu = "0.19.1"
winit = "0.29.10"
